--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title><&= title %></title>
+	<title><%= title %></title>
 	<link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="http://getbootstrap.com/examples/signin/signin.css">
 
