--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,6 +8,15 @@
 
 	<h1><%= title %></h1>
 	<img src="img/todologo.png" alt="todologo">
+
+	<% if (user) { %>
+		<h2>Hello <%= user %></h2>
+		<a href="/logout">Logout</a>
+	<% } else { %>
+		<a href="/register">Register</a>
+		<a href="/login">Login</a>
+	<% } %>
 	
+
 </body>
 </html>
